--- a/h/ho/hos/hosting24.com.html
+++ b/h/ho/hos/hosting24.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hosting24.com privacy policy that was archived on 2016-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161202102030id_/https%3A//www.hosting24.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hosting24.com privacy policy that was archived on 2017-04-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170406160310id_/https%3A//www.hosting24.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
             <meta charset="utf-8">
@@ -83,12 +83,12 @@ src="https://www.facebook.com/tr?id=301499733514427&ev=PageView&noscript=1"
                         use_existing_jquery=false,
 // DO NOT EDIT BELOW THIS LINE
                         f=false,d=document;return{use_existing_jquery:function(){return use_existing_jquery;},library_tolerance:function(){return library_tolerance;},finish:function(){if(!f){f=true;var a=d.getElementById('_vis_opt_path_hides');if(a)a.parentNode.removeChild(a);}},finished:function(){return f;},load:function(a){var b=d.createElement('script');b.src=a;b.type='text/javascript';b.innerText;b.onerror=function(){_vwo_code.finish();};d.getElementsByTagName('head')[0].appendChild(b);},init:function(){settings_timer=setTimeout('_vwo_code.finish()',settings_tolerance);var a=d.createElement('style'),b='body{opacity:0 !important;filter:alpha(opacity=0) !important;background:none !important;}',h=d.getElementsByTagName('head')[0];a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else a.appendChild(d.createTextNode(b));h.appendChild(a);this.load('//dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(d.URL)+'&r='+Math.random());return settings_timer;}};}());_vwo_settings_timer=_vwo_code.init();
-            </script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=124590&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20161202102030id_%2Fhttps%253A%2F%2Fwww.hosting24.com%2Fprivacy.php&amp;r=0.7548071683724231" type="text/javascript"></script>
+            </script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=124590&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20170406160310id_%2Fhttps%253A%2F%2Fwww.hosting24.com%2Fprivacy.php&amp;r=0.3993350116999972" type="text/javascript"></script>
             <!-- begin Convert Experiments code--><script type="text/javascript" src="//cdn-3.convertexperiments.com/js/10002553-10002784.js"></script><!-- end Convert Experiments code -->
 
             <script type="text/javascript"> window.smartlook||(function(d) { var o=smartlook=function(){ o.api.push(arguments)},s=d.getElementsByTagName('script')[0]; var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript'; c.charset='utf-8';c.src='//rec.getsmartlook.com/bundle.js';s.parentNode.insertBefore(c,s); })(document); smartlook('init', '408fd334f4ee1063530cd9e2c3d299964c4d355e'); </script>
 
-        <script id="omapi-script" src="//a.optnmnstr.com/app/js/api.min.js"></script><script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
+        <script id="omapi-script" src="//a.optnmnstr.com/app/js/api.min.js" async=""></script><script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 
         <body>
                 <div id="wrapper">
@@ -133,13 +133,13 @@ src="https://www.facebook.com/tr?id=301499733514427&ev=PageView&noscript=1"
                         </header>
 
 
-
                         <div id="login_to_members_area" style="padding-left:20px;display:none;">
                             <form action="https://www.hosting24.com/login.php?action=login" method="post">
                                 <label for="email">E-mail:</label><br>
                                 <input type="text" name="email" id="email" value="" class="login_form_input"><br>
                                 <label for="password">Password:</label><br>
                                 <input type="password" name="password" id="password" class="login_form_input"><br>
+                                <input type="hidden" name="csrf_token" value="0134a5b50ff2d35aff8529ad9221fa5a">
 
                                 <div class="login_form_btn">               
                                     <input type="submit" name="submit" value="Login »" class="default_button smaller ">
@@ -306,7 +306,7 @@ src="https://www.facebook.com/tr?id=301499733514427&ev=PageView&noscript=1"
         <!-- copyright note -->
         <div class="add">
             <div class="case">
-                <strong class="copyright" style="font: small-caption">© 2004-2016 Hostinger International Limited. All rights reserved.</strong>
+                <strong class="copyright" style="font: small-caption">© 2004-2017 Hostinger International Limited. All rights reserved.</strong>
             </div>
 
             <script type="text/javascript">
@@ -459,7 +459,7 @@ window.onload = function(){
     }
 </script>
 
-<!-- This site is converting visitors into subscribers and customers with OptinMonster - http://optinmonster.com --><div id="om-skcgbsbrncbg0wc2-holder"></div><script>var skcgbsbrncbg0wc2,skcgbsbrncbg0wc2_poll=function(){var r=0;return function(n,l){clearInterval(r),r=setInterval(n,l)}}();!function(e,t,n){if(e.getElementById(n)){skcgbsbrncbg0wc2_poll(function(){if(window['om_loaded']){if(!skcgbsbrncbg0wc2){skcgbsbrncbg0wc2=new OptinMonsterApp();return skcgbsbrncbg0wc2.init({u:"13439.249867",staging:0,dev:0});}}},25);return;}var d=false,o=e.createElement(t);o.id=n,o.src="//a.optnmnstr.com/app/js/api.min.js",o.onload=o.onreadystatechange=function(){if(!d){if(!this.readyState||this.readyState==="loaded"||this.readyState==="complete"){try{d=om_loaded=true;skcgbsbrncbg0wc2=new OptinMonsterApp();skcgbsbrncbg0wc2.init({u:"13439.249867",staging:0,dev:0});o.onload=o.onreadystatechange=null;}catch(t){}}}};(document.getElementsByTagName("head")[0]||document.documentElement).appendChild(o)}(document,"script","omapi-script");</script><!-- / OptinMonster -->
+<div id="om-ylxttlclowbnwvbj-holder"></div><script>var ylxttlclowbnwvbj,ylxttlclowbnwvbj_poll=function(){var r=0;return function(n,l){clearInterval(r),r=setInterval(n,l)}}();!function(e,t,n){if(e.getElementById(n)){ylxttlclowbnwvbj_poll(function(){if(window['om_loaded']){if(!ylxttlclowbnwvbj){ylxttlclowbnwvbj=new OptinMonsterApp();return ylxttlclowbnwvbj.init({"u":"13439.477013","staging":0,"dev":0,"beta":0});}}},25);return;}var d=false,o=e.createElement(t);o.id=n,o.src="//a.optnmnstr.com/app/js/api.min.js",o.async=true,o.onload=o.onreadystatechange=function(){if(!d){if(!this.readyState||this.readyState==="loaded"||this.readyState==="complete"){try{d=om_loaded=true;ylxttlclowbnwvbj=new OptinMonsterApp();ylxttlclowbnwvbj.init({"u":"13439.477013","staging":0,"dev":0,"beta":0});o.onload=o.onreadystatechange=null;}catch(t){}}}};(document.getElementsByTagName("head")[0]||document.documentElement).appendChild(o)}(document,"script","omapi-script");</script>
 
 
 
