--- a/m/my/myw/myworldplus.com.html
+++ b/m/my/myw/myworldplus.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the myworldplus.com privacy policy that was archived on 2016-10-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161029233526id_/http%3A//myworldplus.com/privacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myworldplus.com privacy policy that was archived on 2017-04-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170406224716id_/http%3A//myworldplus.com/privacyPolicy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- SERVER_ADDR : 192.168.1.225 --><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- SERVER_ADDR : 192.168.100.106 --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>MyWorldPlus::PRIVACY POLICY</title>
 <link href="/htdocs/newStyles.css" rel="stylesheet" type="text/css">
@@ -137,36 +137,36 @@ function googleTranslateElementInit() {
   <td class="leftMain" valign="top" style="padding-top:10px">
    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 <tbody><tr>
- <td class="leftLinkSmall" style="padding-left:10px"> Bob&nbsp;Jones </td>
- <td class="leftLinkSmall" align="right" style="padding-right:10px"> 15:13:50 </td>
+ <td class="leftLinkSmall" style="padding-left:10px"> omar&nbsp;baltaz </td>
+ <td class="leftLinkSmall" align="right" style="padding-right:10px"> 08:44:08 </td>
 </tr>
 <tr>
- <td class="leftLinkSmall" style="padding-left:10px"> sarang&nbsp;jhat </td>
- <td class="leftLinkSmall" align="right" style="padding-right:10px"> 04:35:32 </td>
+ <td class="leftLinkSmall" style="padding-left:10px"> Sandra&nbsp;Litt </td>
+ <td class="leftLinkSmall" align="right" style="padding-right:10px"> 15:52:32 </td>
 </tr>
 <tr>
- <td class="leftLinkSmall" style="padding-left:10px"> Miguel&nbsp;Vega </td>
- <td class="leftLinkSmall" align="right" style="padding-right:10px"> 22:50:56 </td>
+ <td class="leftLinkSmall" style="padding-left:10px"> kirk&nbsp;Jacque </td>
+ <td class="leftLinkSmall" align="right" style="padding-right:10px"> 17:10:31 </td>
 </tr>
 <tr>
- <td class="leftLinkSmall" style="padding-left:10px"> Nahin&nbsp;Islam </td>
- <td class="leftLinkSmall" align="right" style="padding-right:10px"> 07:51:44 </td>
+ <td class="leftLinkSmall" style="padding-left:10px"> Jerome&nbsp;Smit </td>
+ <td class="leftLinkSmall" align="right" style="padding-right:10px"> 17:48:14 </td>
 </tr>
 <tr>
- <td class="leftLinkSmall" style="padding-left:10px"> stanley&nbsp;har </td>
- <td class="leftLinkSmall" align="right" style="padding-right:10px"> 10:21:57 </td>
+ <td class="leftLinkSmall" style="padding-left:10px"> Julio&nbsp;Ramos </td>
+ <td class="leftLinkSmall" align="right" style="padding-right:10px"> 10:00:58 </td>
 </tr>
 <tr>
- <td class="leftLinkSmall" style="padding-left:10px"> mona&nbsp;ruby </td>
- <td class="leftLinkSmall" align="right" style="padding-right:10px"> 03:38:26 </td>
+ <td class="leftLinkSmall" style="padding-left:10px"> johnny&nbsp;rodr </td>
+ <td class="leftLinkSmall" align="right" style="padding-right:10px"> 06:30:07 </td>
 </tr>
 <tr>
- <td class="leftLinkSmall" style="padding-left:10px"> Binayak&nbsp;Cha </td>
- <td class="leftLinkSmall" align="right" style="padding-right:10px"> 17:01:00 </td>
+ <td class="leftLinkSmall" style="padding-left:10px"> Stephanie&nbsp;s </td>
+ <td class="leftLinkSmall" align="right" style="padding-right:10px"> 00:58:28 </td>
 </tr>
 <tr>
- <td class="leftLinkSmall" style="padding-left:10px"> Alexandros&nbsp; </td>
- <td class="leftLinkSmall" align="right" style="padding-right:10px"> 15:48:05 </td>
+ <td class="leftLinkSmall" style="padding-left:10px"> Alice&nbsp;Wiggi </td>
+ <td class="leftLinkSmall" align="right" style="padding-right:10px"> 08:31:36 </td>
 </tr>
    </tbody></table>
   </td>
