--- a/d/ds/dsd/dsdomination.com.html
+++ b/d/ds/dsd/dsdomination.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the dsdomination.com privacy policy that was archived on 2016-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161206234159id_/http%3A//dsdomination.com/show/page/privacyPolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dsdomination.com privacy policy that was archived on 2017-04-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170407033507id_/https%3A//dsdomination.com/show/page/privacyPolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>DS Domination</title>
-<link rel="stylesheet" href="http://dsdomination.com/themes/public_22/css/style.css">
-<link rel="stylesheet" href="http://dsdomination.com/themes/public_22/css/responsive.css">
+<link rel="stylesheet" href="https://dsdomination.com/themes/public_22/css/style.css">
+<link rel="stylesheet" href="https://dsdomination.com/themes/public_22/css/responsive.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<link rel="stylesheet" href="http://dsdomination.com/themes/public_22/css/grid.css">
-<link rel="stylesheet" href="http://dsdomination.com/themes/public_22/css/popUpStyle.css">
+<link rel="stylesheet" href="https://dsdomination.com/themes/public_22/css/grid.css">
+<link rel="stylesheet" href="https://dsdomination.com/themes/public_22/css/popUpStyle.css">
 
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -17,7 +17,7 @@
 	<header>
   <div class="header_bg width_full">
     <div class="container">
-		<a href="https://dsdomination.com/show/page/home" class="logo"><img src="http://dsdomination.com/themes/public_22/images/logo.png"></a>
+		<a href="https://dsdomination.com/show/page/home" class="logo"><img src="https://dsdomination.com/themes/public_22/images/logo.png"></a>
 		<a href="https://dsdomination.com/members" class="member_area_btn">Member's Area</a>
 	</div>
   </div>
@@ -66,8 +66,8 @@
 	<div id="divPopUpPageContainer"><div class="divLoading"></div></div>
 </div>
 
-<script src="http://dsdomination.com/themes/public_22/js/main.js" type="text/javascript"></script>  
-<script type="text/javascript" src="http://dsdomination.com/files/js/wds_basic_js.js"> </script>
+<script src="https://dsdomination.com/themes/public_22/js/main.js" type="text/javascript"></script>  
+<script type="text/javascript" src="https://dsdomination.com/files/js/wds_basic_js.js"> </script>
 <footer class="footer">
 	<div class="container">© 2014. All Right Reserved
 		<ul class="footer_link">
@@ -79,11 +79,11 @@
 			<li><a href="https://dsdomination.com/show/page/incomeDisclaimer">Income Disclaimer</a></li>
 		-->
 		<li><a href="https://dsdomination.com/members">Member's Area</a><span>|</span></li>
-			<li><a href="http://dsdomination.com/show/page/privacyPolicy">Privacy Policy</a><span>|</span></li>
-			<li><a href="http://dsdomination.com/show/page/termsAndConditions">Terms and Conditions</a><span>|</span></li>
-			<li><a href="http://dsdomination.com/show/page/contactUs">Contact Us</a><span>|</span></li>
-			<li><a href="http://dsdomination.com/show/page/aboutUs">About Us</a><span>|</span></li>
-			<li><a href="http://dsdomination.com/show/page/incomeDisclaimer">Income Disclaimer</a></li>
+			<li><a href="https://dsdomination.com/show/page/privacyPolicy">Privacy Policy</a><span>|</span></li>
+			<li><a href="https://dsdomination.com/show/page/termsAndConditions">Terms and Conditions</a><span>|</span></li>
+			<li><a href="https://dsdomination.com/show/page/contactUs">Contact Us</a><span>|</span></li>
+			<li><a href="https://dsdomination.com/show/page/aboutUs">About Us</a><span>|</span></li>
+			<li><a href="https://dsdomination.com/show/page/incomeDisclaimer">Income Disclaimer</a></li>
 		
 		
 		</ul>
